style: apply spotless formatting after repackaging